[package]
name = "witl-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.193"
serde_json = "1.0.108"
sqlx = {version = "0.7.3", features=["postgres", "chrono", "uuid"]}
